--- a/APRIL_MEYER_DSC510/APRIL_Assignment6.ipynb
+++ b/APRIL_MEYER_DSC510/APRIL_Assignment6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -13,7 +13,7 @@
     {
      "name": "stdout",
      "text": [
-      "[4.0, 23.0, 34.0, 34.23]\nThe maximum temperature is:  34.23\nThe minimum temperature is:  4.0\nThe total number of temperatures entered are  4\n"
+      "[1.0, 2.0, 3.3, 4.0, 5.0]\nThe maximum temperature is:  5.0 degrees\nThe minimum temperature is:  1.0 degrees\nThe total number of temperatures entered are  5\n"
      ],
      "output_type": "stream"
     }
@@ -29,17 +29,16 @@
     "\"\"\"\n",
     "\n",
     "temp_list = []\n",
-    "userTemp_input = input('Please enter a temperature: \\n' + 'Type \"Done\" when you have entered all temperatures')\n",
-    "while userTemp_input:\n",
+    "while True:\n",
     "    userTemp_input = input('Please enter a temperature: \\n' + 'Type \"Done\" when you have entered all temperatures')\n",
     "    if userTemp_input.lower() == 'done': #check for sentinel value\n",
     "        break\n",
     "    try:\n",
-    "        t2 = temp_list.append(float(userTemp_input)) #verifies float number\n",
+    "        t2 = temp_list.append(float(userTemp_input)) #verifies float number and adds to list\n",
     "    except ValueError:\n",
-    "        userTemp_input = input('Invalid input. Please enter a numeric number.')#reprompts user\n",
-    "    #print(temp_list) #used for testing\n",
-    "print(temp_list)\n",
+    "        userTemp_input = input('Invalid input. Please enter a numeric number.')\n",
+    "        t2 = temp_list.append(float(userTemp_input))\n",
+    "#print(temp_list) #for testing what is in the list\n",
     "print('The maximum temperature is: ', max(temp_list), 'degrees') #returns max temperature\n",
     "print('The minimum temperature is: ', min(temp_list), 'degrees') #returns min temperature\n",
     "print('The total number of temperatures entered are ', len(temp_list)) #returns count of numbers"
