--- a/APRIL_MEYER_DSC510/APRIL_Assignment6.ipynb
+++ b/APRIL_MEYER_DSC510/APRIL_Assignment6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -13,7 +13,7 @@
     {
      "name": "stdout",
      "text": [
-      "[1.0, 2.0, 3.3, 4.0, 5.0]\nThe maximum temperature is:  5.0 degrees\nThe minimum temperature is:  1.0 degrees\nThe total number of temperatures entered are  5\n"
+      "[1.0, 2.0, 3.0, 4.0]\nThe maximum temperature is:  4.0 degrees\nThe minimum temperature is:  1.0 degrees\nThe total number of temperatures entered are  4\n"
      ],
      "output_type": "stream"
     }
@@ -34,11 +34,11 @@
     "    if userTemp_input.lower() == 'done': #check for sentinel value\n",
     "        break\n",
     "    try:\n",
-    "        t2 = temp_list.append(float(userTemp_input)) #verifies float number and adds to list\n",
+    "        temp_list.append(float(userTemp_input)) #verifies float number and adds to list\n",
     "    except ValueError:\n",
     "        userTemp_input = input('Invalid input. Please enter a numeric number.')\n",
-    "        t2 = temp_list.append(float(userTemp_input))\n",
-    "#print(temp_list) #for testing what is in the list\n",
+    "        temp_list.append(float(userTemp_input))\n",
+    "print(temp_list) #for testing what is in the list\n",
     "print('The maximum temperature is: ', max(temp_list), 'degrees') #returns max temperature\n",
     "print('The minimum temperature is: ', min(temp_list), 'degrees') #returns min temperature\n",
     "print('The total number of temperatures entered are ', len(temp_list)) #returns count of numbers"
