--- a/LOOS_DSC510/Assignment 5.1
+++ b/LOOS_DSC510/Assignment 5.1
@@ -10,6 +10,7 @@ def performCaculation(operation):
     output=num1*num2
   elif operation=="/":
      output=num1/num2
+#ENTER ELSE HERE? ELSE print Error?
 
   print (num1,operation,num2,"=",output)
   return
