--- a/LOOS_DSC510/Assignment 5.1
+++ b/LOOS_DSC510/Assignment 5.1
@@ -1,4 +1,4 @@
-def performCaculation(operation):
+def performCalculation(operation):
   num1=int(input("\nEnter first number: "))
   num2=int(input("\nEnter second number: "))
   
@@ -39,7 +39,7 @@ while True:
     break
   if main_input==1:
     operation=input("\nWelcome to the Operand Function\nPlease enter an operand (+,-,*,/):")
-    performCaculation(operation)
+    performCalculation(operation)
   elif main_input==2:
     calculateAverage()
   else:
