--- a/LOOS_DSC510/Assignment 6.1
+++ b/LOOS_DSC510/Assignment 6.1
@@ -1,11 +1,10 @@
-def tempinput():
-  stop=0
-  while stop!=999:
-    temp_input=float(input("\nEnter a temperature: \n"))
-    if temp_input!=999:
-      temps.append(temp_input)
-    stop=temp_input
-  return temps
+def tempinput(temps):
+  temp_input=input("\nEnter a temperature: \n")
+  if temp_input!="Done":
+    temps.append(float(temp_input))
+    tempinput(temps)
+  else :
+    return temps
 
 def largetemp(temps):
   temps.sort()
@@ -22,15 +21,16 @@ def tempcount(temps):
 
 temps=[]
 
+print("\nWelcome!\nEnter \"Done\" after final temperature entry.\n")
+
 while True:
   try:
-    print("\nA non-number entry will terminate the program.\nEnter 999 after final temperature entry.\n")
-    tempinput()
+    tempinput(temps)
     print("\nLargest Temp: ",largetemp(temps))
     print("Smallest Temp: ",smalltemp(temps))
     print("Number of temperatures entered: ",tempcount(temps))
     print("\n")
   except ValueError:
-    break
+    print("\nPlease enter a number or \"Done\"")
   else:
     break
