--- a/HA_DSC510/Understanding_3_3.ipynb
+++ b/HA_DSC510/Understanding_3_3.ipynb
@@ -25,32 +25,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\"<!DOCTYPE html>\\n<html lang='en'>\\n    <head>\\n      \"\n"
+     ]
+    }
+   ],
    "source": [
     "from urllib.request import urlopen\n",
     "web_link = 'https://openweathermap.org/'\n",
     "html = urlopen(web_link)\n",
     "print(html.read(50)) # Print only first 50 words"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   },
-   "execution_count": 6,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "b\"<!DOCTYPE html>\\n<html lang='en'>\\n    <head>\\n      \"\n"
-     ],
-     "output_type": "stream"
-    }
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Beautiful Soup\n",
     "\n",
@@ -63,21 +63,53 @@
     "from bs4 import Beautifulsoup4\n",
     "\n",
     "The beautifulsoup4 library provide useful tools to parse data from html documents. For example, we can parse a tag from a beautifulsoup object as shown below."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "<div class=\"mini-navbar mini-navbar-dark\">\n<div class=\"container\">\n<div class=\"row\">\n<div class=\"col-lg-9 col-md-9 col-sm-9 hidden-xs\">\n<a class=\"first-child\" href=\"//openweathermap.force.com/\" onclick=\"ga('send','event','link','click','supp');\" target=\"_blank\">\n<i class=\"fa fa-envelope\"> </i> <span class=\"hidden-xs\">Support Center</span></a>\n<a class=\"pull-right\" href=\"/home/sign_up\" onclick=\"_gaq.push(['_trackEvent', 'Navbar', 'Main', 'register']);\"><i class=\"fa fa-arrow-circle-down\"></i> Sign Up</a>\n<a class=\"pull-right\" href=\"/home/sign_in\" onclick=\"_gaq.push(['_trackEvent', 'Navbar', 'Main', 'signin']);\"><i class=\"fa fa-sign-in\"></i> Sign In</a>\n<a class=\"pull-right\" href=\"#\" id=\"nav-search\"><i class=\"fa fa-search\" onclick=\"_gaq.push(['_trackEvent', 'Navbar', 'Main', 'search']);\"></i> Weather in your city</a>\n<a class=\"pull-right hidden\" href=\"#\" id=\"nav-search-close\"><i class=\"fa fa-times\"></i></a>\n<!-- Search Form -->\n<form action=\"/find\" class=\"pull-right hidden\" id=\"nav-search-form\" method=\"get\" role=\"search\">\n<div class=\"input-group\">\n<input class=\"form-control\" id=\"q\" name=\"q\" placeholder=\"Search\" type=\"text\"/>\n<span class=\"input-group-btn\">\n<button class=\"btn btn-default\" type=\"submit\"><i class=\"fa fa-search\"></i></button>\n</span>\n</div>\n</form>\n</div>\n<div class=\"col-lg-3 col-md-3 col-sm-3 units-selector\">\n<label class=\"toggle candy blue\" onclick=\"\" style=\"width:100px;animation:none;position:fixed;top:0\">\n<input checked=\"checked\" id=\"units_check\" type=\"checkbox\"/>\n<p><span id=\"metric\">  °C</span><span id=\"imperial\">°F</span></p>\n<a class=\"slide-button\"></a><a class=\"slide-button\"></a>\n</label>\n</div>\n</div>\n</div>\n</div>\n"
-     ],
-     "output_type": "stream"
+      "<div class=\"mini-navbar mini-navbar-dark\">\n",
+      "<div class=\"container\">\n",
+      "<div class=\"row\">\n",
+      "<div class=\"col-lg-9 col-md-9 col-sm-9 hidden-xs\">\n",
+      "<a class=\"first-child\" href=\"//openweathermap.force.com/\" onclick=\"ga('send','event','link','click','supp');\" target=\"_blank\">\n",
+      "<i class=\"fa fa-envelope\"> </i> <span class=\"hidden-xs\">Support Center</span></a>\n",
+      "<a class=\"pull-right\" href=\"/home/sign_up\" onclick=\"_gaq.push(['_trackEvent', 'Navbar', 'Main', 'register']);\"><i class=\"fa fa-arrow-circle-down\"></i> Sign Up</a>\n",
+      "<a class=\"pull-right\" href=\"/home/sign_in\" onclick=\"_gaq.push(['_trackEvent', 'Navbar', 'Main', 'signin']);\"><i class=\"fa fa-sign-in\"></i> Sign In</a>\n",
+      "<a class=\"pull-right\" href=\"#\" id=\"nav-search\"><i class=\"fa fa-search\" onclick=\"_gaq.push(['_trackEvent', 'Navbar', 'Main', 'search']);\"></i> Weather in your city</a>\n",
+      "<a class=\"pull-right hidden\" href=\"#\" id=\"nav-search-close\"><i class=\"fa fa-times\"></i></a>\n",
+      "<!-- Search Form -->\n",
+      "<form action=\"/find\" class=\"pull-right hidden\" id=\"nav-search-form\" method=\"get\" role=\"search\">\n",
+      "<div class=\"input-group\">\n",
+      "<input class=\"form-control\" id=\"q\" name=\"q\" placeholder=\"Search\" type=\"text\"/>\n",
+      "<span class=\"input-group-btn\">\n",
+      "<button class=\"btn btn-default\" type=\"submit\"><i class=\"fa fa-search\"></i></button>\n",
+      "</span>\n",
+      "</div>\n",
+      "</form>\n",
+      "</div>\n",
+      "<div class=\"col-lg-3 col-md-3 col-sm-3 units-selector\">\n",
+      "<label class=\"toggle candy blue\" onclick=\"\" style=\"width:100px;animation:none;position:fixed;top:0\">\n",
+      "<input checked=\"checked\" id=\"units_check\" type=\"checkbox\"/>\n",
+      "<p><span id=\"metric\">  °C</span><span id=\"imperial\">°F</span></p>\n",
+      "<a class=\"slide-button\"></a><a class=\"slide-button\"></a>\n",
+      "</label>\n",
+      "</div>\n",
+      "</div>\n",
+      "</div>\n",
+      "</div>\n"
+     ]
     }
    ],
    "source": [
@@ -88,17 +120,11 @@
     "html = urlopen(web_link)\n",
     "bsObj = BeautifulSoup(html.read())\n",
     "print(bsObj.div)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Handling Connection Error\n",
     "\n",
@@ -108,21 +134,24 @@
     "- URLError: The server is not found\n",
     "\n",
     "Using try and except statement, we should wrap urlopen statement and catch any possible error."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "The server could not be found!\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
@@ -141,36 +170,33 @@
     "except URLError as e:\n",
     "    print(\"The server could not be found!\")\n",
     "    "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Get Title of Website\n",
     "\n",
     "Below code would return either the title of the page or None if there is any problem. This code could be useful when documenting the title of the paper."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "The title of the page could not be found\n"
-     ],
-     "output_type": "stream"
+     ]
     }
    ],
    "source": [
@@ -201,28 +227,19 @@
     "else:\n",
     "    print(title)\n",
     "    "
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "References\n",
-    "Beazley, D. & Jones, B. K. (2013). Python Cookbook. Sebastopol, CA: O’Reilly Media, Inc.\n",
-    "Mitchell, Ryan (2015). Web Scraping with Python. Sebastopol, CA: O’Reilly Media, Inc.\n",
-    "Severance. C. R. (2009). Python for Everybody. http://do1.dr-chuck.com/pythonlearn/EN_us/pythonlearn.pdf\n",
-    "https://www.w3schools.com/python/default.asp\n",
+    "**References**  \n",
+    "Beazley, D. & Jones, B. K. (2013). Python Cookbook. Sebastopol, CA: O’Reilly Media, Inc.  \n",
+    "Mitchell, Ryan (2015). Web Scraping with Python. Sebastopol, CA: O’Reilly Media, Inc.  \n",
+    "Severance. C. R. (2009). Python for Everybody. http://do1.dr-chuck.com/pythonlearn/EN_us/pythonlearn.pdf  \n",
+    "https://www.w3schools.com/python/default.asp  \n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   }
  ],
  "metadata": {
@@ -234,25 +251,25 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.5"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
