--- a/HA_DSC510/Understanding_4_3.ipynb
+++ b/HA_DSC510/Understanding_4_3.ipynb
@@ -173,14 +173,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Repository name: grequests\nRepository description: Requests + Gevent = <3\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "# Search GitHub's repositories for requests\n",
+    "response = requests.get(\n",
+    "    'https://api.github.com/search/repositories',\n",
+    "    params={'q': 'requests+language:python'},\n",
+    ")\n",
+    "\n",
+    "json_response = response.json()\n",
+    "repository = json_response['items'][0]\n",
+    "print(f'Repository name: {repository[\"name\"]}')\n",
+    "print(f'Repository description: {repository[\"description\"]}')"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**References**  \n",
+    "Beazley, D. & Jones, B. K. (2013). Python Cookbook. Sebastopol, CA: O’Reilly Media, Inc.  \n",
+    "Mitchell, Ryan (2015). Web Scraping with Python. Sebastopol, CA: O’Reilly Media, Inc.  \n",
+    "Severance. C. R. (2009). Python for Everybody. http://do1.dr-chuck.com/pythonlearn/EN_us/pythonlearn.pdf  \n",
+    "https://www.w3schools.com/python/default.asp  \n",
+    "https://realpython.com/python-requests/#the-get-request  \n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
