--- a/HA_DSC510/Interest_5_2.ipynb
+++ b/HA_DSC510/Interest_5_2.ipynb
@@ -1,15 +1,528 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
-   "outputs": [],
    "source": [
-    "\n"
+    "# Iterators & Generators\n",
+    "## Iterators\n",
+    "We can use *for* statement for looping over a sequence variable such as list, string, dictionary, and so on. To build a python3 iterator, we use the iter() and next() functions. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "1 2 3 4 "
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "for i in [1, 2, 3, 4]:\n",
+    "    print(i, end=' ')\n",
+    "    "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "p y t h o n "
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "for c in \"python\":\n",
+    "    print(c, end=' ')    \n",
+    "    "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "x 1\ny 2\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "for key, value in {\"x\": 1, \"y\": 2}.items():\n",
+    "    print(key, value)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "So there are many types of objects which can be used with a for loop. These are called iterable objects. There are many functions which consume these iterables. The built-in function *iter* takes an iterable object and returns an iterator."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "<list_iterator object at 0x06B177F0>\n1\n2\n3\n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-1406ba4bcb64>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ],
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "x = iter([1, 2, 3])\n",
+    "print(x)\n",
+    "print(next(x))\n",
+    "print(next(x))\n",
+    "print(next(x))\n",
+    "print(next(x)) # This line will raise an error\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Iterator are implemented as classes. To create a Python iterator object, you will need to implement two methods in your iterator class.\n",
+    "\n",
+    "__iter__: This returns the iterator object itself and is used while using the \"for\" and \"in\" keywords. The __iter__ method is what makes an object iterable. Behind the scenes, the iter function calls __iter__ method on the given object.\n",
+    "\n",
+    "__next__: This returns the next value. This would return the StopIteration error once all the objects have been looped through."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "class RangeGen(object):\n",
+    "    def __init__(self, min_, max_):\n",
+    "        self.current_ = min_\n",
+    "        self.max_ = max_\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        \"\"\"Returns itself as an iterator object\"\"\"\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        \"\"\"Returns the next value till current is lower than high\"\"\"\n",
+    "        if self.current_ > self.max_:\n",
+    "            raise StopIteration\n",
+    "        else:\n",
+    "            self.current_ += 1\n",
+    "            return self.current_ - 1\n",
+    "\n",
+    "range_1 = RangeGen(1,10)\n",
+    "for i in range_1:\n",
+    "    print(i, end=' ')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   },
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 "
+     ],
+     "output_type": "stream"
+    }
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "5"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 34
+    }
+   ],
+   "source": [
+    "range_2 = RangeGen(5,9)\n",
+    "next(range_2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "6"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 35
+    }
+   ],
+   "source": [
+    "next(range_2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "7"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 36
+    }
+   ],
+   "source": [
+    "next(range_2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "8"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "next(range_2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "9"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 38
+    }
+   ],
+   "source": [
+    "next(range_2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-22d12403cbb3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mnext\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange_2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-25-071806ddc991>\u001b[0m in \u001b[0;36m__next__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;34m\"\"\"Returns the next value till current is lower than high\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcurrent_\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mStopIteration\u001b[0m: "
+     ],
+     "ename": "StopIteration",
+     "evalue": "",
+     "output_type": "error"
+    }
+   ],
+   "source": [
+    "next(range_2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can use __next__ method to iterate as follows.\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 "
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "num = range(1, 11)\n",
+    "num_iter = iter(num)\n",
+    "while True:\n",
+    "    try:\n",
+    "        x = num_iter.__next__()\n",
+    "        print(x, end=' ')\n",
+    "    except StopIteration:\n",
+    "        break"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Generators\n",
+    "Generators simplifies creation of iterators. A generator is a function that produces a sequence of results instead of a single value. When a generator function is called, it returns a generator object without even beginning execution of the function. When next method is called for the first time, the function starts executing until it reaches yield statement. The yielded value is returned by the next call."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<generator object simple_gen at 0x01599AB0>"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 47
+    }
+   ],
+   "source": [
+    "def simple_gen():\n",
+    "    yield 'A'\n",
+    "    yield 'B'\n",
+    "    yield 'C'\n",
+    "    \n",
+    "simple_gen()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "A\nB\nC\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "gen = simple_gen()\n",
+    "for char in gen:\n",
+    "    print(char)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Below is a simple range generator function using generator:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "1\n2\n3\n4\n5\n6\n7\n8\n9\n10\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "def range_gen(min, max):\n",
+    "    while min <= max:\n",
+    "        yield min\n",
+    "        min += 1\n",
+    "        \n",
+    "a = range_gen(1, 10)\n",
+    "for i in a:\n",
+    "    print(i)\n",
+    "    "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Inside the while loop when it reaches to the yield statement, the value of low is returned and the generator state is suspended. During the second next call the generator resumed where it freeze-ed before and then the value of low is increased by one. It continues with the while loop and comes to the yield statement again."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "References\n",
+    "https://anandology.com/python-practice-book/iterators.html\n",
+    "https://www.hackerearth.com/practice/python/iterators-and-generators/iterators-and-generators-1/tutorial/\n",
+    "https://pymbook.readthedocs.io/en/latest/igd.html\n",
+    "https://data-flair.training/blogs/python-generator/\n",
+    "https://data-flair.training/blogs/python-iterator/"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   }
  ],
  "metadata": {
@@ -29,6 +542,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
