--- a/LOOS_DSC510/Assignment 6.1
+++ b/LOOS_DSC510/Assignment 6.1
@@ -1,3 +1,8 @@
+#Computer Calculator
+#File: Assignment 6.1
+#Name: Michael Loos
+#Date: 1/13/2020
+
 def tempinput(temps):
   temp_input=input("\nEnter a temperature: \n")
   if temp_input!="Done":
