--- a/LOOS_DSC510/Assignment 6.1
+++ b/LOOS_DSC510/Assignment 6.1
@@ -32,7 +32,7 @@ while True:
     print("Number of temperatures entered: ",tempcount(temps))
     print("\n")
   except ValueError:
-    if not temps:
+    if temps==[]:
       print("No temperature entered")
     else:
       print("\nPlease enter a number or \"Done\"")
