--- a/LOOS_DSC510/Assignment 8.1
+++ b/LOOS_DSC510/Assignment 8.1
@@ -1,8 +1,7 @@
 import string
 
 def add_word(word,dictionary): 
-  low_case=word.lower()
-  dictionary[low_case]=1
+  dictionary[word]=1
   return
 
 def process_line(line,dictionary): 
