--- a/HA_DSC510/Interest_8_2.ipynb
+++ b/HA_DSC510/Interest_8_2.ipynb
@@ -502,8 +502,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In summary, tuple is not good for data processing because users can't modify tuple and there are not many useful methods. However, it's very useful in such case:\n",
-    "● user wants a reference table that can't be changed. For example, a list of States in the US shouldn't be changed.\n",
+    "In summary, tuple is not good for data processing because users can't modify tuple and there are not many useful methods. However, it's very useful in such case that user wants a reference table that can't be changed. For example, a list of States in the US shouldn't be changed.\n",
     "\n"
    ],
    "metadata": {
