--- a/HA_DSC510/Understanding_8_3.ipynb
+++ b/HA_DSC510/Understanding_8_3.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
-   "outputs": [],
    "source": [
+    "# Dictionary\n",
+    "\n",
+    "A dictionary is a data structure using key/value pairs in Python. A dictionary is similar to a list or a tuple in a way it contains multiple values in a single variable, but they are also fundamentally different because a dictionary is using a key for a value. In a list, a value is indexed by position so that the order of the elements is very important but since a value in a dictionary is indexed using a key, the order of the elements will not matter. A key in a dictionary must be unique. \n",
+    "\n",
+    "## Creation of A Dictionary\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
@@ -29,6 +37,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
