--- a/HA_DSC510/Understanding_8_3.ipynb
+++ b/HA_DSC510/Understanding_8_3.ipynb
@@ -390,7 +390,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "There are two ways to remove an item from a dictionary: pop and del. Pop will remove an item with a key provided, then it will return the value. Del will just remove the item with the value. Del also can delete the dictionary while \n"
+    "There are two ways to remove an item from a dictionary: pop and del. Pop will remove an item with a key provided, then it will return the value. Del will just remove the item with the value. Del also can delete the dictionary while clear() will only clear items in the dictionary.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -443,7 +443,7 @@
    "source": [
     "del james['ssn']\n",
     "for key, value in james.items():\n",
-    "    print(key, \":\", value)\n"
+    "    print(key, \":\", value)"
    ],
    "metadata": {
     "collapsed": false,
@@ -451,6 +451,22 @@
      "name": "#%%\n",
      "is_executing": false
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The usefulness of dictionary is that it can be used in lots of mapping tables where key and value exists. Since values can be looked up using keys, we can create a relationship between data using keys easily.\n",
+    "\n",
+    "References  \n",
+    "Beazley, D. & Jones, B. K. (2013). Python Cookbook. Sebastopol, CA: O’Reilly Media, Inc.  \n",
+    "Mitchell, Ryan (2015). Web Scraping with Python. Sebastopol, CA: O’Reilly Media, Inc.  \n",
+    "Severance. C. R. (2009). Python for Everybody. http://do1.dr-chuck.com/pythonlearn/EN_us/pythonlearn.pdf  \n",
+    "https://www.w3schools.com/python/default.asp  \n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
